--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,15 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.6.0"
+}
 
 allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
     }
 }
 
