--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -587,7 +587,7 @@ style:
   UseCheckOrError:
     active: false
   UseDataClass:
-    active: true
+    active: false
     excludeAnnotatedClasses: ""
     allowVars: false
   UseIfInsteadOfWhen:
