--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -59,7 +59,7 @@ complexity:
     threshold: 4
   ComplexInterface:
     active: true
-    threshold: 30
+    threshold: 40
     includeStaticDeclarations: false
   ComplexMethod:
     active: true
@@ -96,7 +96,7 @@ complexity:
     excludeStringsWithLessThan5Characters: true
     ignoreStringsRegex: '$^'
   TooManyFunctions:
-    active: true
+    active: false
     excludes: "**/test/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt"
     thresholdInFiles: 20
     thresholdInClasses: 50
